[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiometer"
description = "A Python concurrency scheduling library, compatible with asyncio and trio"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "Florimond Manca", email = "florimond.manca@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Framework :: AsyncIO",
  "Framework :: Trio",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "anyio~=3.2",
  "typing-extensions; python_version<'3.8'",
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/florimondmanca/aiometer"

[tool.setuptools.dynamic]
version = { attr = "aiometer.__version__" }
readme = { file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown" }
